--- a/todo-app/todo/views/index.ejs
+++ b/todo-app/todo/views/index.ejs
@@ -24,78 +24,31 @@
     <h1><%= title %></h1>
     
     <p><%= bodyt %></p>
-  <form id="main" method="POST" action="/items">
+  <form id="main" method="POST" action="/todo">
     <label for="title"> Title(required): </label>
-    <textarea class= form-control id="title" name="titletext" required></textarea>
+    <textarea class= form-control id="title" name="titletext" type="text"></textarea>
     <br>
-    
-    <label for="description"> Description(required): </label>
-    <textarea class= form-control id="description" name="destext" required></textarea>
-    <br>
+    <!-- required -->
 
+    <label for="description"> Description(required): </label>
+    <textarea class= form-control id="description" name="destext" type="text"></textarea>
+    <br>
+<!--     required
+ -->
  <label for="priority"> Priority: </label>
- <select class="form-control" id="priority" name="priority">
+ <select class="form-control" id="priority" name="priority" type="number">
   <option>1</option>
   <option>2</option>
   <option>3</option>
   <option>4</option>
   <option>5</option>
 </select>
-
     
   <hr>
     <label for="duedate"> Due Date: </label>
-
-        <select class="form-control" id="monthDue" name="monthDue">
-          <option>1 - January</option>
-          <option>2 - February</option>
-          <option>3 - March</option>
-          <option>4 - April</option>
-          <option>5 - May</option>
-          <option>6 - June</option>
-          <option>7 - July</option>
-          <option>8 - August</option>
-          <option>9 - September</option>
-          <option>10 - October</option>
-          <option>11 - November</option>
-          <option>12 - December</option>
-        </select>
-
-        <select class="form-control" id="dayDue" name="dayDue">
-          <option>1</option>
-          <option>2</option>
-          <option>3</option>
-          <option>4</option>
-          <option>5</option>
-          <option>6</option>
-          <option>7</option>
-          <option>8</option>
-          <option>9</option>
-          <option>10</option>
-          <option>11</option>
-          <option>12</option>
-          <option>13</option>
-          <option>14</option>
-          <option>15</option>
-          <option>16</option>
-          <option>17</option>
-          <option>18</option>
-          <option>19</option>
-          <option>20</option>
-          <option>21</option>
-          <option>22</option>
-          <option>23</option>
-          <option>24</option>
-          <option>25</option>
-          <option>26</option>
-          <option>27</option>
-          <option>28</option>
-          <option>29</option>
-          <option>30</option>
-          <option>31</option>
-        </select>
+     <input type="date" name="due_date">
     
-	<input type="checkbox" name="complete" value="donezo"> 
+	<input type="checkbox" name="complete" value="true"> 
   <label> Completed? </label>
 <br>
 
@@ -103,18 +56,13 @@
 </form> 
   </body>
 
-    <!-- Date Picker -->
-
-    <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment-with-locales.js"></script>
-      <script src="//cdn.rawgit.com/Eonasdan/bootstrap-datetimepicker/d004434a5ff76e7b97c8b07c01f34ca69e635d97/src/js/bootstrap-datetimepicker.js"></script>
-
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
     <script src="http://cdn.jsdelivr.net/jquery.validation/1.13.1/jquery.validate.min.js"></script>
      <!-- My Customer JS -->
     <!-- Validate -->
-    <script src="/javascripts/validate.js"></script>
+
     <!--     To JSON -->
     <script src="/javascripts/toJSON.js"></script>
     
