--- a/todo-app/todo/views/todo.ejs
+++ b/todo-app/todo/views/todo.ejs
@@ -30,7 +30,7 @@
 
 <% tasks.forEach(function(task) { %> 
 <div id="holdleftparent"> 
-  <% if (task.completed != true) { %>
+  <% if (task.completed !== true) { %>
     <div id="todo_<%= task._id %>" class="goleft">
       <li><%= task.title  %></li>
       <li><%= task.description %></li>
