routing to auction page completed

--- a/jadeapp/views/index.jade
+++ b/jadeapp/views/index.jade
@@ -32,10 +32,10 @@ block content
         .col-md-2.light-pink.height50
         ul.nav.navbar-nav.center-nav.light-pink
           li 
-            a(href='#') Buy
+            a(href='/auction') Buy
             span.sr-only (current)
           li
-            a(href='#') Sell
+            a(href='/auction') Sell
           li
             a(href='#') How it Works
           li 
