--- a/jadeapp/public/stylesheets/style.css
+++ b/jadeapp/public/stylesheets/style.css
@@ -228,3 +228,15 @@ a.btn {
 .rounded-border-bottom-right {
   border-bottom-right-radius: 50px;
 }
+
+/*For Auction Pg*/
+.font-normal {
+      font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  }
+
+/* for container */ 
+.container {
+  width: 100% !important;
+  padding: 0;
+  margin: 0;
+}
