--- a/jadeapp/views/index.jade
+++ b/jadeapp/views/index.jade
@@ -1,52 +1,9 @@
+doctype html
+html
 
-extends layout
+  include ./layouttop.jade
 
-block content
-  .container 
-    .row.signin
-      .col-md-2.light-teal.height44
-      .col-md-8.light-teal.height44
-        .row
-          .col-md-3
-          .col-md-3
-          .col-md-3
-          .col-md-3
-            .user-links Sign In | Sign Up
-      .col-md-2.light-teal.height44
-    .row.light-teal
-      .col-md-2.light-teal.height158
-      .col-md-4.height158.padding-top-50px.buttons.rounded-border-top-left.white
-        img(src='/images/images/savings-multiplied-logo.png').img-responsive.logo-tagline
-      .col-md-4.height158.buttons.rounded-border-top-right.white
-        .row#topofbuttons
-        .row
-        a.btn.btn-teal.move-btn-right.mybtn About
-        a.btn.btn-green Contact
-        a.btn.btn-dark-purple Blog
-        a.btn.btn-bright-pink Press
-        img(src='/images/images/tagline.png').img-responsive
-        .row
-      .col-md-2.light-teal.height158
-    .row 
-      .col-md-12.light-pink
-        .col-md-2.light-pink.height50
-        ul.nav.navbar-nav.center-nav.light-pink
-          li 
-            a(href='/auction') Buy
-            span.sr-only (current)
-          li
-            a(href='/auction') Sell
-          li
-            a(href='#') How it Works
-          li 
-            a(href='#') Links
-          li 
-            a(href='#') Community
-          li 
-            form.navbar-form(role='search')
-              .form-group.has-feedback
-                i.glyphicon.glyphicon-search.form-control-feedback
-                input.form-control.padding-left-right10x(type='text', placeholder='Search')
+  .container
     .row 
       .col-md-2.dark-teal.height500
       .col-md-4.height500
@@ -72,20 +29,8 @@ block content
         img(src='/images/images/homepage/message_board_callout.png').img-responsive.col-md-3
         img(src='/images/images/homepage/special_offers_callout.png').img-responsive.col-md-3
       .col-md-2.dark-teal.height106
-    .row.dark-teal
-      .col-md-3
-      .col-md-6
-        ul.nav.navbar.center-nav
-          li.col-md-2 Link
-          li.col-md-2 Link
-          li.col-md-2 Link
-          li.col-md-2 Link
-          li.col-md-2 Link
-          li.col-md-2 Link
-      .col-md-3
-    .row
-      .col-md-12
 
+  include ./layoutbottom.jade
 
 
 
