--- a/jadeapp/views/indexoriginal.jade
+++ b/jadeapp/views/indexoriginal.jade
@@ -1,9 +1,3 @@
-    .row 
-      .col-md-2.dark-teal.height500
-      .col-md-4.height500
-      .col-md-4.height500
-      .col-md-2.dark-teal.height500
-
 
 extends layout
 
@@ -38,10 +32,10 @@ block content
         .col-md-2.light-pink.height50
         ul.nav.navbar-nav.center-nav.light-pink
           li 
-            a(href='#') Buy
+            a(href='/auction') Buy
             span.sr-only (current)
           li
-            a(href='#') Sell
+            a(href='/auction') Sell
           li
             a(href='#') How it Works
           li 
