--- a/jadeapp/views/layoutbottom.jade
+++ b/jadeapp/views/layoutbottom.jade
@@ -1,17 +1,14 @@
-    .row
-      .col-md-2.dark-teal.height106
-      .col-md-8.height106.rounded-border-bottom-right.rounded-border-bottom-left.white
-      .col-md-2.dark-teal.height106
-    .row.dark-teal
-      .col-md-3
-      .col-md-6
-        ul.nav.navbar.center-nav
-          li.col-md-2 Link
-          li.col-md-2 Link
-          li.col-md-2 Link
-          li.col-md-2 Link
-          li.col-md-2 Link
-          li.col-md-2 Link
-      .col-md-3
-    .row
-      .col-md-12
+.row.dark-teal
+  .col-md-3
+  .col-md-6
+    ul.nav.navbar.center-nav
+      li.col-md-2 Link
+      li.col-md-2 Link
+      li.col-md-2 Link
+      li.col-md-2 Link
+      li.col-md-2 Link
+      li.col-md-2 Link
+  .col-md-3
+.row
+  .col-md-12
+block content2
