--- a/jadeapp/views/auction.jade
+++ b/jadeapp/views/auction.jade
@@ -1,155 +1,104 @@
+doctype html
+html
 
-extends layout
+  include ./layouttop.jade
 
-block content
   .container 
-    .row.signin
-      .col-md-2.light-teal.height44
-      .col-md-8.light-teal.height44
-        .row
-          .col-md-3
-          .col-md-3
-          .col-md-3
-          .col-md-3
-            .user-links Sign In | Sign Up
-      .col-md-2.light-teal.height44
-    .row.light-teal
-      .col-md-2.light-teal.height158
-      .col-md-4.height158.padding-top-50px.buttons.rounded-border-top-left.white
-        img(src='/images/images/savings-multiplied-logo.png').img-responsive.logo-tagline
-
-      .col-md-4.height158.buttons.rounded-border-top-right.white
-        .row#topofbuttons
-        .row
-        a.btn.btn-teal.move-btn-right.mybtn About
-        a.btn.btn-green Contact
-        a.btn.btn-dark-purple Blog
-        a.btn.btn-bright-pink Press
-        img(src='/images/images/tagline.png').img-responsive
-        .row
-      .col-md-2.light-teal.height158
     .row 
-      .col-md-12.light-pink
-        .col-md-2.light-pink.height50
-        ul.nav.navbar-nav.center-nav.light-pink
-          li 
-            a(href='/auction') Buy
-            span.sr-only (current)
-          li
-            a(href='/auction') Sell
-          li
-            a(href='') How it Works
-          li 
-            a(href='#') Links
-          li 
-            a(href='#') Community
-          li 
-            form.navbar-form(role='search')
-              .form-group.has-feedback
-                i.glyphicon.glyphicon-search.form-control-feedback
-                input.form-control.padding-left-right10x(type='text', placeholder='Search')
-    .row 
-      .col-md-2.dark-teal.height500.font-normal
-      .col-md-2.height500.font-normal 
-        .row 
-          .col-sm-12
-            p Limit Your Search By: 
-        .row 
-          .col-sm-12
-            hr
-        .row 
-          .col-sm-6
-            p Condition
-          .col-sm-6  
-            .radio
-            label New
-            input(type='radio', name='condition')
-            .radio
-            label Gently Used
-            input(type='radio', name='condition')
-        .row 
-          p Size:
-          .col-sm-6
-            .radio
-            label 4
-            input(type='radio', name='size')
-            .radio
-            label 5
-            input(type='radio', name='size')
-            .radio
-            label 6
-            input(type='radio', name='size')
-            .radio
-            label 7
-            input(type='radio', name='size')
-          .col-sm-6
-            .radio
-            label 8
-            input(type='radio', name='size')
-            .radio
-            label 9
-            input(type='radio', name='size')
-            .radio
-            label 10
-            input(type='radio', name='size')
-            .radio
-            label 11
-            input(type='radio', name='size')
-        .row
-          p Season 
-          .col-sm-1
-          .col-sm-10
-            .radio
-            label All Seasons
-            input(type='radio', name='season')
-            .radio
-            label Spring
-            input(type='radio', name='season')
-            .radio
-            label Summer
-            input(type='radio', name='season')
-            .radio
-            label Fall
-            input(type='radio', name='season')
-            .radio
-            label Winter
-            input(type='radio', name='season')
-          .col-sm-1
-        .row
-          p Type
-          .col-sm-1
-          .col-sm-10
-            .radio
-            label Any
-            input(type='radio', name='type')
-            .radio
-            label One-Piece
-            input(type='radio', name='type')
-            .radio
-            label Tops
-            input(type='radio', name='type')
-            .radio
-            input(type='radio', name='type')
-            label Bottoms
+      .col-md-2.dark-teal.height750.font-normal
+      .col-md-2.font-normal
+       .row
+        .col-md-1
+        .col-md-10.holdsForm
+          .row.auctionForm.topOfForm
+            .col-sm-12
+              p Limit Your Search By: 
+          .row.auctionForm 
+            .col-sm-12
+              hr
+          .row.auctionForm 
+            .col-sm-5
+              p Condition
+            .col-sm-7  
+              .radio
+              input(type='radio', name='condition')
+              label New
+              .radio
+              input(type='radio', name='condition')
+              label Gently Used
+          .row.auctionForm 
+            p Size:
+            .col-sm-6
+              .radio
+              input(type='radio', name='size')
+              label 4
+              .radio
+              input(type='radio', name='size')
+              label 5
+              .radio
+              input(type='radio', name='size')
+              label 6
+              .radio
+              input(type='radio', name='size')
+              label 7
+            .col-sm-6
+              .radio
+              input(type='radio', name='size')
+              label 8
+              .radio
+              input(type='radio', name='size')
+              label 9
+              .radio
+              input(type='radio', name='size')
+              label 10
+              .radio
+              input(type='radio', name='size')
+              label 11
+          .row.auctionForm
+            p Season 
             .col-sm-1
-      .col-md-6.height500
-      .col-md-2.dark-teal.height500
+            .col-sm-10
+              .radio
+              input(type='radio', name='season')
+              label All Seasons
+              .radio
+              input(type='radio', name='season')
+              label Spring
+              .radio
+              input(type='radio', name='season')
+              label Summer
+              .radio
+              input(type='radio', name='season')
+              label Fall
+              .radio
+              input(type='radio', name='season')
+              label Winter
+            .col-sm-1
+          .row.auctionForm
+            p Type
+            .col-sm-1
+            .col-sm-10
+              .radio
+              input(type='radio', name='type')
+              label Any
+              .radio
+              input(type='radio', name='type')
+              label One-Piece
+              .radio
+              input(type='radio', name='type')
+              label Tops
+              .radio
+              input(type='radio', name='type')
+              label Bottoms
+              .col-sm-1
+            .row.auctionForm.bottomOfForm
+        .col-md-1
+      .col-md-6
+      .col-md-2.dark-teal.height750
 
     .row
       .col-md-2.dark-teal.height106
       .col-md-8.height106.rounded-border-bottom-right.rounded-border-bottom-left.white
       .col-md-2.dark-teal.height106
-    
-    .row.dark-teal
-      .col-md-3
-      .col-md-6
-        ul.nav.navbar.center-nav
-          li.col-md-2 Link
-          li.col-md-2 Link
-          li.col-md-2 Link
-          li.col-md-2 Link
-          li.col-md-2 Link
-          li.col-md-2 Link
-      .col-md-3
-    .row
-      .col-md-12
+  
+  include ./layoutbottom.jade
