create form made and create GET working

--- a/jadeapp/views/layouttop.jade
+++ b/jadeapp/views/layouttop.jade
@@ -57,7 +57,7 @@ body
           a(href='/auction') Buy
           span.sr-only (current)
         li
-          a(href='/createItem') Sell
+          a(href='/auction/createItem') Sell
         li
           a(href='#') How it Works
         li 
