Login and create new auction item working, rendering to User Profile complete

--- a/jadeapp/views/layouttop.jade
+++ b/jadeapp/views/layouttop.jade
@@ -63,7 +63,7 @@ body
         li 
           a(href='#') Links
         li 
-          a(href='#') Community
+          a(href='/auction/profile') Community
         li 
           form.navbar-form(role='search')
             .form-group.has-feedback
