Edit and update working 2

--- a/jadeapp/views/layouttop.jade
+++ b/jadeapp/views/layouttop.jade
@@ -19,6 +19,9 @@ head
   //*** MORE BOOTSTRAP (JS)
   script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js')
 body
+  
+  //Custom edit and delete
+  script(src='/javascripts/auctionHandler.js')
 
    .container 
   .row.signin
