--- a/jadeapp/views/createItem.jade
+++ b/jadeapp/views/createItem.jade
@@ -12,40 +12,40 @@ html
 
         fieldset
           form#createItem(method='POST', action='/auction/createItem')
+            input#inputText.form-control(type='hidden', name='db_id', aria-describedby='sizing-addon1', value='#{auctionItem._id}') 
             .formfield
               .input-group
-                input#inputText.form-control(type='text', name='title', placeholder='title', aria-describedby='sizing-addon1')
+                input#inputText.form-control(type='text', name='title', aria-describedby='sizing-addon1', value='#{auctionItem.title}') 
             br          
             .formfield
               .input-group
-                input#inputText.form-control(type='type', name='type', placeholder='type', aria-describedby='sizing-addon1')
+                input#inputText.form-control(type='type', name='type', aria-describedby='sizing-addon1', value='#{auctionItem.type}') 
             br
             .formfield
               .input-group
                 input#inputText.form-control(
-                type='size',name='size', placeholder='size', aria-describedby='sizing-addon1')
+                type='size',name='size', aria-describedby='sizing-addon1', value='#{auctionItem.size}') 
             br
             .formfield
               .input-group
                 input#inputText.form-control(
                 type='season', name='season',
-                placeholder='season', aria-describedby='sizing-addon1')
+                aria-describedby='sizing-addon1', value='#{auctionItem.season}') 
             br
             .formfield
               .input-group
                 input#inputText.form-control(
-                type='condition', name='condition', placeholder='condition', aria-describedby='sizing-addon1')
+                type='condition', name='condition', aria-describedby='sizing-addon1', value='#{auctionItem.condition}') 
             br
             .formfield
               .input-group
                 input#inputText.form-control(
-                type='text', name='image', placeholder='image url', aria-describedby='sizing-addon1')
+                type='text', name='image', aria-describedby='sizing-addon1', value='#{auctionItem.image}') 
             br
             .formfield
               .input-group
                 input#inputText.form-control(
-                type='brand', name='brand',
-                placeholder='brand', aria-describedby='sizing-addon1')
+                type='brand', name='brand', aria-describedby='sizing-addon1', value='#{auctionItem.brand}') 
             br
             input.submitbutton(type='submit', value='Sell It!')
       .col-md-1.height500
