Add, Edit, Delete, and Delete working now

--- a/jadeapp/views/userHome.jade
+++ b/jadeapp/views/userHome.jade
@@ -9,7 +9,7 @@ html
       .col-md-1.height500
       .col-md-6.height500
         h1 Welcome #{user}
-        h6 You have #{itemLength} auction items total.
+        h6 You have #{auctionItems.length} auction items total.
         br
         p Here Are Your Items In Detail: 
           each auctionItem in auctionItems
